<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/question_field"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/hint_answer"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/answer_field"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/hint_answer"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:onClick="sendToFirebase"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/remove"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/logout"
                android:onClick="logOut"
                />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>